chore: convert to move object (#90)